# time-left-chatgpt-app

./: .gitignore  README.md  pyproject.toml
server/: main.py  requirements.txt  test_main.py
web/: preview.html  widget.html
